<resources>
    <string name="app_name">SWeMS</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="title_activity_trend">Trend</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Gender:</string>
    <string name="height">Height:</string>
    <string name="age">Age:</string>
</resources>