<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Me">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_image"
        android:layout_width="137dp"
        android:layout_height="130dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="255dp"
        android:layout_marginBottom="457dp"
        android:contentDescription="@string/todo"
        app:civ_border_color="@color/black"
        app:civ_border_width="3dp"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="91dp" />

    <Button
        android:id="@+id/bt_logout"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idealWeight"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="137dp"
        android:background="@drawable/custom_navi"
        android:text="@string/logout"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="288dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        android:background="@drawable/custom_navi"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="517dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_name2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="452dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="442dp"
        android:text="Edit"
        android:background="#009EFD"/>

    <Button
        android:id="@+id/edit_button2"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="399dp"
        android:text="Edit"
        android:background="#009EFD"/>

    <Button
        android:id="@+id/edit_button3"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="351dp"
        android:background="#009EFD"
        android:text="Edit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="452dp"
        android:text="@string/age"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="266dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="407dp"
        android:text="@string/gender"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="269dp"
        android:layout_marginBottom="360dp"
        android:text="@string/height"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="454dp"
        android:text="your age"
        android:layout_toEndOf="@+id/textView"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="266dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="403dp"
        android:text="your gender"
        android:layout_toEndOf="@+id/textView2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="350dp"
        android:text="your height"
        android:layout_toEndOf="@+id/textView3"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/idealWeight"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="281dp"
        android:text="ideal weight"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="131dp"
        android:layout_height="43dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="269dp"
        android:layout_marginBottom="222dp"
        android:text="Ideal Weight:"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>